// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listbox should render properly 1`] = `
.emotion-0 [data-reach-listbox-input][data-state="expanded"] {
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-1 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 8px;
}

.emotion-4 {
  background-color: transparent;
  border: none;
  padding: 0;
}

.emotion-4:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-5 {
  overflow-y: hidden;
  padding: 8px;
  padding-top: 0;
  margin: -8px;
  margin-bottom: 0;
}

.emotion-6 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  background-color: #808080;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-7 {
  padding: 4px;
}

.emotion-8 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-8::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-8::-moz-placeholder {
  font-style: italic;
}

.emotion-8:-ms-input-placeholder {
  font-style: italic;
}

.emotion-8::placeholder {
  font-style: italic;
}

.emotion-8:hover {
  border: 1px solid #808080;
}

.emotion-8:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-9 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  margin: 0;
  overflow: auto;
  max-height: 350px;
  background-color: #808080;
  color: #ffffff;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
}

<label
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-2"
    defaultValue=""
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-3"
    >
      <span>
        Select Type
      </span>
    </ListboxButton>
    <ListboxPopover
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <input
              aria-label="Filter types"
              className="emotion-8"
              onChange={[Function]}
              placeholder="Filter types"
              type="search"
              value=""
            />
          </div>
          <ListboxList
            className="emotion-9"
          >
            <ListboxOptions
              nestedCount={0}
              options={
                Object {
                  "analysis": Object {
                    "zvi": Object {
                      "tinyProxy": "analysis.zvi.tinyProxy",
                    },
                  },
                  "clip": Object {
                    "pile": "clip.pile",
                    "sourceAssetId": "clip.sourceAssetId",
                    "timeline": "clip.timeline",
                    "type": "clip.type",
                  },
                  "location": Object {
                    "city": "location.city",
                    "code": "location.code",
                    "country": "location.country",
                  },
                  "media": Object {
                    "author": "media.author",
                    "content": "media.content",
                    "description": "media.description",
                    "keywords": "media.keywords",
                    "orientation": "media.orientation",
                    "title": "media.title",
                    "type": "media.type",
                  },
                  "source": Object {
                    "extension": "source.extension",
                    "filename": "source.filename",
                    "mimetype": "source.mimetype",
                    "path": "source.path",
                  },
                  "system": Object {
                    "dataSourceId": "system.dataSourceId",
                    "jobId": "system.jobId",
                    "projectId": "system.projectId",
                    "state": "system.state",
                    "taskId": "system.taskId",
                  },
                }
              }
            />
          </ListboxList>
        </div>
      </div>
    </ListboxPopover>
  </ListboxInput>
</label>
`;

exports[`Listbox should render properly 2`] = `
.emotion-0 [data-reach-listbox-input][data-state="expanded"] {
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-1 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 8px;
}

.emotion-4 {
  background-color: transparent;
  border: none;
  padding: 0;
}

.emotion-4:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-5 {
  overflow-y: hidden;
  padding: 8px;
  padding-top: 0;
  margin: -8px;
  margin-bottom: 0;
}

.emotion-6 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  background-color: #808080;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-7 {
  padding: 4px;
}

.emotion-8 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-8::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-8::-moz-placeholder {
  font-style: italic;
}

.emotion-8:-ms-input-placeholder {
  font-style: italic;
}

.emotion-8::placeholder {
  font-style: italic;
}

.emotion-8:hover {
  border: 1px solid #808080;
}

.emotion-8:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-9 {
  padding: 8px;
}

<label
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-2"
    defaultValue=""
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-3"
    >
      <span>
        Select Type
      </span>
    </ListboxButton>
    <ListboxPopover
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <input
              aria-label="Filter types"
              className="emotion-8"
              onChange={[Function]}
              placeholder="Filter types"
              type="search"
              value="qwerty"
            />
          </div>
          <div
            className="emotion-9"
          >
            No Results
          </div>
        </div>
      </div>
    </ListboxPopover>
  </ListboxInput>
</label>
`;

exports[`Listbox should render properly 3`] = `
.emotion-0 [data-reach-listbox-input][data-state="expanded"] {
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-1 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 8px;
}

.emotion-4 {
  background-color: transparent;
  border: none;
  padding: 0;
}

.emotion-4:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-5 {
  overflow-y: hidden;
  padding: 8px;
  padding-top: 0;
  margin: -8px;
  margin-bottom: 0;
}

.emotion-6 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  background-color: #808080;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-7 {
  padding: 4px;
}

.emotion-8 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-8::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-8::-moz-placeholder {
  font-style: italic;
}

.emotion-8:-ms-input-placeholder {
  font-style: italic;
}

.emotion-8::placeholder {
  font-style: italic;
}

.emotion-8:hover {
  border: 1px solid #808080;
}

.emotion-8:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-9 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  margin: 0;
  overflow: auto;
  max-height: 350px;
  background-color: #808080;
  color: #ffffff;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
}

<label
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-2"
    defaultValue=""
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-3"
    >
      <span>
        Select Type
      </span>
    </ListboxButton>
    <ListboxPopover
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <input
              aria-label="Filter types"
              className="emotion-8"
              onChange={[Function]}
              placeholder="Filter types"
              type="search"
              value="time"
            />
          </div>
          <ListboxList
            className="emotion-9"
          >
            <ListboxOptions
              nestedCount={0}
              options={
                Object {
                  "clip": Object {
                    "timeline": "clip.timeline",
                  },
                }
              }
            />
          </ListboxList>
        </div>
      </div>
    </ListboxPopover>
  </ListboxInput>
</label>
`;

exports[`Listbox should render properly 4`] = `
.emotion-0 [data-reach-listbox-input][data-state="expanded"] {
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-1 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 8px;
}

.emotion-4 {
  background-color: transparent;
  border: none;
  padding: 0;
}

.emotion-4:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-5 {
  overflow-y: hidden;
  padding: 8px;
  padding-top: 0;
  margin: -8px;
  margin-bottom: 0;
}

.emotion-6 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  background-color: #808080;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-7 {
  padding: 4px;
}

.emotion-8 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-8::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-8::-moz-placeholder {
  font-style: italic;
}

.emotion-8:-ms-input-placeholder {
  font-style: italic;
}

.emotion-8::placeholder {
  font-style: italic;
}

.emotion-8:hover {
  border: 1px solid #808080;
}

.emotion-8:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-9 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  margin: 0;
  overflow: auto;
  max-height: 350px;
  background-color: #808080;
  color: #ffffff;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
}

<label
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-2"
    defaultValue=""
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-3"
    >
      <span>
        Select Type
      </span>
    </ListboxButton>
    <ListboxPopover
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <input
              aria-label="Filter types"
              className="emotion-8"
              onChange={[Function]}
              placeholder="Filter types"
              type="search"
              value="time"
            />
          </div>
          <ListboxList
            className="emotion-9"
          >
            <ListboxOptions
              nestedCount={0}
              options={
                Object {
                  "clip": Object {
                    "timeline": "clip.timeline",
                  },
                }
              }
            />
          </ListboxList>
        </div>
      </div>
    </ListboxPopover>
  </ListboxInput>
</label>
`;

exports[`Listbox should render properly with existing attribute 1`] = `
.emotion-0 [data-reach-listbox-input][data-state="expanded"] {
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-1 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 8px;
}

.emotion-4 {
  background-color: transparent;
  border: none;
  padding: 0;
}

.emotion-4:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-5 {
  overflow-y: hidden;
  padding: 8px;
  padding-top: 0;
  margin: -8px;
  margin-bottom: 0;
}

.emotion-6 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  background-color: #808080;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-7 {
  padding: 4px;
}

.emotion-8 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-8::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-8::-moz-placeholder {
  font-style: italic;
}

.emotion-8:-ms-input-placeholder {
  font-style: italic;
}

.emotion-8::placeholder {
  font-style: italic;
}

.emotion-8:hover {
  border: 1px solid #808080;
}

.emotion-8:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-9 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  margin: 0;
  overflow: auto;
  max-height: 350px;
  background-color: #808080;
  color: #ffffff;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
}

<label
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-2"
    defaultValue="clip.timeline"
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-3"
    >
      <span>
        timeline
      </span>
    </ListboxButton>
    <ListboxPopover
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <input
              aria-label="Filter types"
              className="emotion-8"
              onChange={[Function]}
              placeholder="Filter types"
              type="search"
              value=""
            />
          </div>
          <ListboxList
            className="emotion-9"
          >
            <ListboxOptions
              nestedCount={0}
              options={
                Object {
                  "analysis": Object {
                    "zvi": Object {
                      "tinyProxy": "analysis.zvi.tinyProxy",
                    },
                  },
                  "clip": Object {
                    "pile": "clip.pile",
                    "sourceAssetId": "clip.sourceAssetId",
                    "timeline": "clip.timeline",
                    "type": "clip.type",
                  },
                  "location": Object {
                    "city": "location.city",
                    "code": "location.code",
                    "country": "location.country",
                  },
                  "media": Object {
                    "author": "media.author",
                    "content": "media.content",
                    "description": "media.description",
                    "keywords": "media.keywords",
                    "orientation": "media.orientation",
                    "title": "media.title",
                    "type": "media.type",
                  },
                  "source": Object {
                    "extension": "source.extension",
                    "filename": "source.filename",
                    "mimetype": "source.mimetype",
                    "path": "source.path",
                  },
                  "system": Object {
                    "dataSourceId": "system.dataSourceId",
                    "jobId": "system.jobId",
                    "projectId": "system.projectId",
                    "state": "system.state",
                    "taskId": "system.taskId",
                  },
                }
              }
            />
          </ListboxList>
        </div>
      </div>
    </ListboxPopover>
  </ListboxInput>
</label>
`;
